# vfs-desktop

./: .gitignore  IMPLEMENTATION.md  LICENSE  PROJECT_STATUS.md  README.md  package-lock.json  package.json  sys_mon.md  tailwind.config.js  vite.config.ts
src/: App-old.vue  App.vue  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  test_vfs_state.json  test_vfs_state2.json  test_vfs_state3.json
src-tauri/src/: archives.rs  commands.rs  config.rs  error.rs  file_operations.rs  file_operations_async.rs  lib.rs  main.rs  progress.rs  state.rs  templates.rs
src-tauri/src/api/: blob_store.rs  mod.rs  monitor.rs  notification_channels.rs  real_fs.rs  recovery.rs  security.rs  share.rs  steganography.rs  temporary_fs.rs  torrent.rs  vault_error.rs  virtual_fs.rs
src-tauri/src/api_server/: handlers.rs  mod.rs  models.rs  routes.rs  state.rs  websocket.rs
src-tauri/src/api_server/handlers/: batch.rs  bookmarks.rs  config.rs  files.rs  system.rs
src-tauri/src/api_service/: batch.rs  bookmarks.rs  config.rs  error.rs  files.rs  mod.rs  models.rs  system.rs  vault.rs
src-tauri/src/application/: mod.rs
src-tauri/src/core/: directory.rs  file.rs  filesystem.rs  metadata.rs  mod.rs  node.rs
src-tauri/src/core/search/: enums.rs  mod.rs  search_service.rs  specification.rs  sq_n_sqb.rs  trait_file_specification.rs
src-tauri/src/core/search/combinators/: and.rs  mod.rs
src-tauri/src/core/search/filters/: extension.rs  mod.rs  name.rs  size.rs
src-tauri/src/queue/: executor.rs  manager.rs  mod.rs  persistence.rs  scheduler.rs  types.rs
src-tauri/tests/: contains_tests.rs  extensionspec_tests.rs  fuzzy_tests.rs  mock_fs_tests.rs  queue_logic_test.rs  regex_tests.rs  sqb_tests.rs  tests.rs  tests_w_size_lims.rs  tests_w_specs.rs
src/components/: BaseWidget.vue  BatchAttributeDialog.vue  BatchOperationsQueue.vue  BatchRenameDialog.vue  CalculatorWidget.vue  CommandPalette.vue  ConfirmDialog.vue  ConflictDialog.vue  ContextMenu.vue  CurrencyWidget.vue  Dashboard.vue  DualPanelContainer.vue  FileList.vue  FilePanel.vue  FilePickerDialog.vue  GroupByDropdown.vue  InlineFileCreator.vue  InputDialog.vue  Notifications.vue  OperationsProgress.vue  OperationsQueuePanel.vue  OperationsQueuePanelSimple.vue  PanelToolbar.vue  PasswordRecovery.vue  Preview.vue  ProgrammerToolbar.vue  PropertiesDialog.vue  QueueScheduleDialog.vue  QueueSettingsDialog.vue  QuickNotesWidget.vue  RecoverySetup.vue  ResourceMonitor.vue  Settings.vue  SettingsFileColors.vue  ShareDialog.vue  Sidebar.vue  StegoVaultModal.vue  Terminal.vue  TextEditor.vue  Toolbar.vue  (+5 more)
src/components/monitor/: AnomalyLog.vue  CoreHeatmap.vue  LiveChart.vue  ProcessTable.vue  SystemMonitorDashboard.vue
src/composables/: useAppHandlers.ts  useAppUIState.ts  useArchiveOperations.ts  useBatchOperations.ts  useBookmarks.ts  useClipboard.ts  useCommands.ts  useConflictResolution.ts  useContextMenu.ts  useContextMenuActions.ts  useDialogs.ts  useDirectoryTree.ts  useDragDrop.ts  useDualPanel.ts  useEditorState.ts  useFileColoring.ts  useFileContentCache.ts  useFileOperations.ts  useFileOperationsProgress.ts  useFileSystem.ts  useGlobalRefresh.ts  useGrouping.ts  useKeyboard.ts  useNavigation.ts  useNotifications.ts  useOperationsQueue.ts  useProgrammerMode.ts  useSearch.ts  useSelection.ts  useSwipeNavigation.ts  useSystemMetrics.ts  useTemplates.ts  useTerminal.ts  useTheme.ts  useTorrent.ts  useUIState.ts  useVault.ts  useWidgets.ts
src/styles/: themes.css
src/types/: fileColoring.ts  index.ts  theme.ts
src/utils/: api.ts  batchRenamePatterns.ts  shortcuts.ts
src/widgets/calculator/: Widget.vue  config.json
(+20 files in other folders)
