[package]
name = "vfdir"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = []
api-server = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vfdir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5.0"
base64 = "0.22"
llm-utl = "0.1.5"
once_cell = "1.19"
sysinfo = "0.33"
filetime = "0.2"
wait-timeout = "0.2"

# HTTP Server dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }

# API utilities
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

