[package]
name = "vfdir"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[features]
default = []
api-server = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "vfdir_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
dirs = "5.0"
base64 = "0.22"
llm-utl = "0.1.5"
once_cell = "1.19"
sysinfo = "0.33"
filetime = "0.2"
wait-timeout = "0.2"

# HTTP Server dependencies
axum = { version = "0.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = "1.0"
axum-extra = { version = "0.9", features = ["typed-header"] }

# API utilities
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
futures-util = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Cryptography and Security
aes-gcm = "0.10"
argon2 = "0.5"
sha2 = "0.10"
rand = "0.8"
subtle = "2.5"
zeroize = { version = "1.7", features = ["derive"] }
toml = "0.8"
bincode = "1.3"
tempfile = "3.8"
lettre = { version = "0.11.19", features = ["smtp-transport", "builder"] }
zip = "7.0.0"
tar = "0.4.44"
flate2 = "1.1.5"
walkdir = "2.5.0"
